test/org/midica/testfiles/failing/block-if-not-alone.midica
INCLUDE inc/instruments.midica

VAR $x = 1

{ if=$x, elsif $x
	0  c  /4
}